# fastapi_example

./: .gitignore  LICENSE  debug  out.json  pyproject.toml
api/: __init__.py  books_db.py  configure_server.py  server.py
api/account/: __init__.py
api/account/auth/: __init__.py
api/repository/: __init__.py  refresh_token_repository.py  user_repository.py
api/router/: __init__.py  comments_route.py  posts_route.py  users_route.py
api/schemas/: __init__.py
api/tokens/: tokens_managment.py  utils.py
entidades/: users.py
router/: __init__.py  comments.py  posts.py  users.py
servicios/: memo_storage.py  password_managment.py  updatebook.py  userauth.py  usercrudservice.py
servicios/users/: userservice.py
servicios/users/account/: account.py  crud.py  passman.py  session.py
templates/: index.html
tests/: fake_data_generator.py  generators.py  test_account.py  test_api.py  test_auth.py  test_get_item.py  test_memo_storage.py  test_server.py  test_user_crud_service.py  test_user_repository.py  test_user_route.py
tests/tokens/: test_token_managment.py
tests/users/: test_account_service.py  test_memo_storage.py  test_sessions_service.py  test_user_crud_service.py  test_user_route.py  test_user_service.py
