[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Martin Algañaraz <idcmardelplata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pytest = "^7.4.3"
jinja2 = "^3.1.2"
requests = "^2.31.0"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
